Fix contrast issue for non-focused text inputs

--- a/styles/sass/skeleton/_forms.scss
+++ b/styles/sass/skeleton/_forms.scss
@@ -104,7 +104,7 @@ select {
 	padding: 6px 4px;
 	outline: none;
 	border-radius: 2px;
-	color: #777;
+	color: #767676;
 	margin: 0;
 	background: #fff;
 }
